2006-10-01  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/Makefile.am: added test target.

2006-09-23  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: upgraded to EPSG 6.11

2006-09-22  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c: removed static "start" variable to resolve
	thread-safety problems (bug 1283).

2006-09-14  Frank Warmerdam  <warmerdam@pobox.com>

	* Produce 4.5.0beta2 release.

	* src/PJ_krovak.c: Add +czech flag to apply non-useful sign reversal
	that someone once apparently thought was a good idea.  By default work
	like folks want.  Contributed by Martin Landa and Radim Blazek. 
	Bug 1133, and 147.

2006-07-07  Frank Warmerdam  <warmerdam@pobox.com>

	* Added esri.extra and other.extra to distributed and installed files
	in nad/Makefile.am.

	* autotools update.  

2006-06-23  Andrey Kiselev  <dron@ak4719.spb.edu>

	* src/PJ_eqdc.c: Do not call pj_enfn() twice avoiding memory leak.

2006-05-01  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Ensure that out-of-range lat/long values in 
	geodetic_to_geocentric are considered transient errors.

Rel. 4.5.0 2006-04-21
-------------------------------------------------------------------------
	
2006-04-21  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: Upgraded using GDAL 1.3.2 with prime meridian fixes,
	and reporting of deprecated PCSes. 

2006-04-20  Frank Warmerdam  <warmerdam@pobox.com>

	* Fixed direction of Bogota meridian (west not east).

2006-04-19  Frank Warmerdam  <warmerdam@pobox.com>

	* Preparing 4.5.0 release.

2006-03-30  Frank Warmerdam  <warmerdam@pobox.com>

	* projects.h, cs2cs.c, pj_strerrno.c, p_series.c, gen_cheb.c: Added
	_CRT_SECURE_NO_DEPRECATE declaration for VC8+, and ensure projects.h
	gets included first where needed.  Avoids loud warnings on VC8.
	http://bugzilla.remotesensing.org/show_bug.cgi?id=1145

2006-03-29  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_krovak.c: Removed MessageBox() DEBUG stuff.
